fix aligning of course-event-tasks mentioned in #1183

--- a/imports/ui/components/courses/delete-events/delete-events.scss
+++ b/imports/ui/components/courses/delete-events/delete-events.scss
@@ -1,17 +1,16 @@
+.course-event-tasks {
+	position: relative;
+}
+.course-event-tasks * {
+	vertical-align: top;
+}
+
 .delete-events-details {
 	color: $gray;
 
 	&:hover {
 		color: $gray;
 	}
-}
-
-.course-event-tasks > .btn:first-child {
-	width: auto;
-}
-
-.course-event-tasks > .btn + .btn {
-	@include td-margin(left, 5px);
 }
 
 .modal-body .panel {
